# Vera

./: .gitignore  AGENT-USAGE.md  CONTRIBUTING.md  Cargo.toml  README.md  SKILL.md  deny.toml
.factory/: init.sh  services.yaml
.github/workflows/: release.yml
benchmarks/: competitor-config.md
benchmarks/reports/: competitor-baselines.md  final-benchmark-suite.md  reproduction-guide.md
benchmarks/results/competitor-baselines/: all_baselines.json  cocoindex_results.json  ripgrep_results.json  vector-only_results.json
benchmarks/results/final-suite/: combined_results.json  vera_bm25_only_results.json  vera_hybrid_norerank_results.json  vera_hybrid_results.json
benchmarks/results/local-binaries/: v0.7.0-jina-cuda-onnx.json
benchmarks/scripts/: run_baselines.py  run_final_benchmarks.py  run_vera_benchmarks.py
crates/vera-cli/: Cargo.toml
crates/vera-cli/src/: helpers.rs  main.rs  skill_assets.rs  state.rs  update_check.rs
crates/vera-core/: Cargo.toml  build.rs
crates/vera-core/src/: chunk_text.rs  config.rs  corpus.rs  lib.rs  local_models.rs  stats.rs  types.rs
crates/vera-core/src/discovery/: mod.rs
crates/vera-core/src/embedding/: dynamic.rs  local_provider.rs  mod.rs  provider.rs  tests.rs
crates/vera-core/src/indexing/: mod.rs  pipeline.rs  pipeline_tests.rs  update.rs  update_tests.rs
crates/vera-core/src/parsing/: chunker.rs  extractor.rs  extractor_test_helpers.rs  languages.rs  metadata_tests.rs  mod.rs  references.rs  signatures.rs  sphinx.rs  tests.rs
crates/vera-core/src/retrieval/: completion_client.rs  dynamic_reranker.rs  hybrid.rs  local_reranker.rs  mod.rs  rag_fusion.rs  ranking.rs  reranker.rs  search_quality_tests.rs  search_service.rs  vector.rs
crates/vera-core/src/storage/: bm25.rs  metadata.rs  vector.rs
crates/vera-mcp/: Cargo.toml
crates/vera-mcp/src/: lib.rs  server.rs  tools.rs  watcher.rs
docker/: Dockerfile.openvino
docs/: architecture.md  benchmarks.md  docker.md  features.md  how-it-works.md  installation.md  maintainability-audit.md  manual-install.md  models.md  query-guide.md  supported-languages.md  troubleshooting.md
docs/adr/: 000-decision-summary.md  002-storage-backend.md  004-chunking-strategy.md  005-query-aware-retrieval.md
docs/releases/: v0.7.0-accuracy-improvements.md
eval/: measure-token-reduction.sh
eval/src/: metrics.rs  output.rs  types.rs
scripts/: release.sh
skills/vera/: SKILL.md
skills/vera/agents/: openai.yaml
skills/vera/references/: install.md  mcp.md  query-patterns.md  troubleshooting.md
spikes/storage/: .gitignore  Cargo.toml  README.md
spikes/storage/results/: lancedb.json  sqlite_vec.json  summary.json  tantivy.json
spikes/storage/src/: bench_lancedb.rs  bench_sqlite_vec.rs  bench_tantivy.rs  common.rs  main.rs
(+52 files in other folders)
