[package]
name = "vera-core"
description = "Core engine for Vera: parsing, indexing, retrieval, storage, and embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Tree-sitter parsing
tree-sitter = { workspace = true }

# Storage backends
rusqlite = { workspace = true }
tantivy = { workspace = true }

# HTTP client for embedding/reranker APIs
reqwest = { workspace = true }
tree-sitter-rust = "0.24.1"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-javascript = "0.25.0"
tree-sitter-language = "0.1.7"
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
ignore = "0.4"
rayon = "1.11.0"
futures = "0.3.32"
sha2 = "0.10.9"
tree-sitter-ruby = "0.23.1"
tree-sitter-bash = "0.23.3"
tree-sitter-kotlin-sg = "0.4.0"
tree-sitter-swift = "0.7.1"
tree-sitter-lua = "0.2.0"
tree-sitter-scala = "0.23.3"
tree-sitter-zig = "1.1.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-elixir = "0.3.5"
tree-sitter-dart = "0.1.0"
tree-sitter-hcl = { git = "https://github.com/tree-sitter-grammars/tree-sitter-hcl", version = "1.2.0" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
